feat: establish project foundation with design system and core components
- Set up Expo Router with TypeScript and absolute path aliases
- Build ThemedView base component with layout prop system (main, row, centeredContent)
- Implement design system constants: Colors, Spacing, and Typography (Poppins)
- Add static category data with icons and colors for income and expense types
- Create shared components: MetricCard, TransactionItem, PeriodSelector
- Configure Prettier and ESLint for consistent code style
- Define Transaction model with TransactionType enum

--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "expo lint"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.4.1",
+    "@expo/vector-icons": "^15.0.3",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.33",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
@@ -18,6 +22,9 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "eslint": "^9.0.0",
+    "eslint-config-expo": "~10.0.0",
+    "prettier": "^3.8.1",
     "typescript": "~5.9.2"
   },
   "private": true
