--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,17 @@
 {
-  "extends": "expo/tsconfig.base",
-  "compilerOptions": {
-    "strict": true
-  }
+    "extends": "expo/tsconfig.base",
+    "compilerOptions": {
+        "strict": true,
+        "baseUrl": ".",
+        "paths": {
+            "@components/*": ["components/*"],
+            "@constants/*": ["constants/*"],
+            "@assets/*": ["assets/*"],
+            "@typography/*": ["typography/*"],
+            "@models/*": ["models/*"],
+            "@data/*": ["data/*"],
+            "@utils/*": ["utils/*"]
+        }
+    },
+    "include": ["**/*.ts", "**/*.tsx", "types/**/*.d.ts"]
 }
